# sspp-assignment

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cuda/: CMakeLists.txt  env.sh  setupandlaunch.sh
cuda/matvec/: CMakeLists.txt  TEMP-scp-cuda.sh  cuda.cu  cuda.sub  makeandsub.sh  mmio.c  scp-cuda.sh
queues/: cuda.sub  cudabulk.sub  omp.sub  omp2.sub  ompbulk.sub  ompbulk2.sub
scripts/: cuda-compile.sh  cuda-full.sh  envscp.sh  envsetup.sh  getjobs.sh  omp-compile.sh  omp-full.sh
src/: mmio.h
